--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,5 +2,14 @@ page-home {
 #map{
     height: 100%;
     width:100%;
+
+}
+#pos{
+    z-index:99;
+    position:absolute;
+    left:10px;
+    width:100%;
+    top:10px;
+    display:none;
 }
 }
